# GR_Submission

./: .gitignore  ASSIGNMENT_EXPLAINED.md  README.md  REPRODUCE.md  SECTION3_ATTEMPTS.md  SOLUTION.md
docker/: docker-compose.yml  entrypoint.sh  humble.Dockerfile  isaac.Dockerfile  jazzy.Dockerfile  setup_host.sh
outputs/: README.md
outputs/section1_reachability/: reachability.csv
outputs/section2_coverage/: coverage_path_counter.csv  coverage_path_mirror.csv  coverage_trajectory_counter.yaml  coverage_trajectory_mirror.yaml  writeup.md
outputs/section3_wiping/: live_admittance_classic.csv  p_counter_full.yaml  p_mirror_full.yaml  wiping_log.csv  wiping_log_mirror.csv  wiping_traj_continuous.yaml  wiping_trajectory.yaml  wiping_trajectory_mirror.yaml  writeup.md
ros2_ws/src/gr_assignment/gr_kinematics/: REACHABILITY_NOTES.md  package.xml  setup.cfg  setup.py
ros2_ws/src/gr_assignment/gr_kinematics/config/: ik.yaml  reachability.yaml
ros2_ws/src/gr_assignment/gr_kinematics/gr_kinematics/: ik_service.py  reachability.py
ros2_ws/src/gr_assignment/gr_kinematics/launch/: section1.launch.py
ros2_ws/src/gr_assignment/gr_scene/: package.xml  setup.cfg  setup.py
ros2_ws/src/gr_assignment/gr_scene/config/: scene.yaml
ros2_ws/src/gr_assignment/gr_scene/gr_scene/: scene_loader.py
ros2_ws/src/gr_assignment/gr_scene/launch/: load_scene.launch.py
ros2_ws/src/gr_assignment/gr_scene/urdf/: scene.urdf.xacro
ros2_ws/src/gr_assignment/gr_wiping_control/: WIPING_NOTES.md  package.xml  setup.cfg  setup.py
ros2_ws/src/gr_assignment/gr_wiping_control/config/: wiping.yaml  wiping_controllers.yaml  wiping_controllers_gz.yaml
ros2_ws/src/gr_assignment/gr_wiping_control/description/: piper_wiping.xacro  piper_wiping_gz.xacro
ros2_ws/src/gr_assignment/gr_wiping_control/gr_wiping_control/: controller.py  kdl_chain.py  moveit_wiping.py  traj_player.py
ros2_ws/src/gr_assignment/gr_wiping_control/launch/: gazebo_wiping.launch.py  gz_wiping.launch.py  section3.launch.py
ros2_ws/src/gr_assignment/gr_wiping_control/scripts/: admittance_controller_wipe.py  admittance_wipe.py  gen_counter_coverage.py  gen_mirror_coverage.py  make_demo_gif.py  paint_trail.py  replay_wipe.py
ros2_ws/src/gr_assignment/gr_wiping_control/worlds/: wiping.world  wiping_gz.sdf
scripts/: demo_gui.py  host_up.sh  render_world.py  run_all_jazzy.sh  section1.sh  section2.sh  section3.sh  setup_docker_creds.sh
scripts/gui/: _lib.sh  coverage.sh  reachability.sh  stop.sh  (+5 more)
(+9 files in other folders)
