<?xml version="1.0"?>
<package format="3">
  <name>gr_scene</name>
  <version>0.1.0</version>
  <description>Planning scene (countertop, faucet, mirror) for GR Assignment</description>
  <maintainer email="aswinrajan2002@gmail.com">ashie</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>moveit_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>shape_msgs</depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
